printing page updated, html layout updated with css for proper printing page downloading, live url & repo link added in readme file, set minimum number to imageCopyNum input element

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 	</header>
 
 	<section class="section">
-		<div class="mainContainer showLoade" aria-placeholder="drop Your Images Here!">
+		<div class="mainContainer showLoade dragHove" aria-placeholder="drop Your Images Here!">
 			<div class="imgContainer">
 				<!-- <img src="AbhishekKembalikarLarge.jpg" class="img" crossorigin="anonymous"> -->
 			</div>
@@ -31,7 +31,7 @@
 		<input type="file" name="file" id="fileInput" multiple>
 
 		<label for="imageCopyNum">Copy of Images add :</label>
-		<input type="number" name="number" id="imageCopyNum" value="8">
+		<input type="number" name="number" id="imageCopyNum" min="1" value="8">
 
 		<button type="button" class="btn reset">Clear All Images</button>
 		<button type="button" class="btn generate">Generate More Image</button>
