--- a/index.html
+++ b/index.html
@@ -8,18 +8,20 @@
 	<meta name="description" content="Photo ID Tool is a fast and user-friendly web application designed to help you create passport-size photos in just a few clicks.">
 	<link rel="stylesheet" href="resources/style.css">
 	<link rel="shortcut icon" href="resources/favicon.svg" type="image/x-icon">
+	<link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;600&display=swap" rel="stylesheet">
 </head>
 
 <body>
 	<header class="header">
 		<img class="logo" src="resources/favicon.svg" alt="logo">
 		<h1 class="primary-heading">Photo Id Tool</h1>
+		<button class="btn menuBtn">menu</button>
 	</header>
 
 	<section class="section">
-		<div class="mainContainer showLoade dragHove" aria-placeholder="drop Your Images Here!">
+		<div class="mainContainer showLoade	 dragHove" aria-placeholder="drop Your Images Here!">
 			<div class="imgContainer">
-				<!-- <img src="AbhishekKembalikarLarge.jpg" class="img" crossorigin="anonymous"> -->
+				<img src="resources/AbhishekKembalikarLarge.jpg" class="img" crossorigin="anonymous">
 			</div>
 		</div>
 
@@ -31,19 +33,19 @@
 		<input type="file" name="file" id="fileInput" multiple>
 
 		<label for="imageCopyNum">Copy of Images add :</label>
-		<input type="number" name="number" id="imageCopyNum" min="1" value="8">
+		<input type="number" name="number" id="imageCopyNum" min="1" value="1" placeholder="Enter number for copy of images">
 
 		<button type="button" class="btn reset">Clear All Images</button>
-		<button type="button" class="btn generate">Generate More Image</button>
+		<button type="button" class="btn generate">Generate Images</button>
 
 		<button type="button" class="btn download">Download as PDF</button>
 		<button type="button" class="btn print">🖨️ Print This Page</button>
 	</div>
 
 
-	<footer>
-		<p class="copyright">&copy;2025.</p>
-		<cite class="aurthor">Created by - <a href="https://github.com/AbhiSH0919" target="_blank">@AbhiSH0919</a></cite>
+	<footer class="footer">
+		<p class="copyright">&copy;2025</p>
+		<cite class="aurthor">- Created by <a href="https://github.com/AbhiSH0919" target="_blank">@AbhiSH0919</a></cite>
 	</footer>
 
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/html2pdf.js/0.10.1/html2pdf.bundle.min.js"></script>
