--- a/index.html
+++ b/index.html
@@ -3,13 +3,14 @@
 
 <head>
   <meta charset="UTF-8" />
-  <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+  <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Photo Id Tool</title>
+  <meta name="description" content="Photo ID Tool is a fast and user-friendly web application designed to help you create passport-size photos in just a few clicks.">
 </head>
 
 <body>
-  <div id="root"></div>
+  <div id="root" style="height: 100%;"></div>
   <script type="module" src="/src/main.jsx"></script>
 </body>
 
